--- a/tests/index.html
+++ b/tests/index.html
@@ -10,13 +10,14 @@
   <script type="text/javascript" src="https://code.jquery.com/qunit/qunit-2.4.0.js"></script>
 
   <script src="../public/assets/libs/angular.js"></script>
+  <script src="../public/assets/libs/angular-route.js"></script>
+  <script src="../public/assets/libs/angular-mocks.js"></script>
   <script src="../public/app/main.js"></script>
   <script>
-
-    const injector = angular.injector(["ng", "main"]);
+    const injector = angular.injector(["ng", "ngMock", "main"]);
     let backup = {},
       unit,
-      index;
+      entry;
 
     // Backup local data
     unit = injector.get("LocalStorageService");
@@ -29,27 +30,27 @@
     });
 
     QUnit.test("formatDate()", t => {
-      t.equal(unit.formatDate("Jun 22, 1986"), "Jun 22, 1986");
-      t.equal(unit.formatDate("Oct 17, 2017"), "Oct 17, 2017");
+      t.equal(unit.formatDate(new Date("Jun 22, 1986")), "Jun 22, 1986");
+      t.equal(unit.formatDate(new Date("Oct 17, 2017")), "Oct 17, 2017");
     });
 
     QUnit.test("formatTime()", t => {
-      t.equal(unit.formatTime("Jun 22, 00:00"), "12:00 am");
-      t.equal(unit.formatTime("Jun 22, 09:00"), "9:00 am");
-      t.equal(unit.formatTime("Jun 22, 11:59"), "11:59 am");
-      t.equal(unit.formatTime("Jun 22, 12:00"), "12:00 pm");
-      t.equal(unit.formatTime("Jun 22, 13:00"), "1:00 pm");
-      t.equal(unit.formatTime("Jun 22, 23:59"), "11:59 pm");
+      t.equal(unit.formatTime(new Date("Jun 22, 00:00")), "12:00 am");
+      t.equal(unit.formatTime(new Date("Jun 22, 09:00")), "9:00 am");
+      t.equal(unit.formatTime(new Date("Jun 22, 11:59")), "11:59 am");
+      t.equal(unit.formatTime(new Date("Jun 22, 12:00")), "12:00 pm");
+      t.equal(unit.formatTime(new Date("Jun 22, 13:00")), "1:00 pm");
+      t.equal(unit.formatTime(new Date("Jun 22, 23:59")), "11:59 pm");
       t.equal(unit.formatTime(1508443947648), "2:12 pm")
     });
 
     QUnit.test("totalHours()", t => {
-      t.strictEqual(unit.totalHours("Jun 22 2017 12:00", "Jun 22 2017 13:00"), 1.00);
-      t.strictEqual(unit.totalHours("Jun 22 2017 12:00", "Jun 22 2017 13:30"), 1.50);
-      t.strictEqual(unit.totalHours("Jun 22 2017 09:00", "Jun 22 2017 09:20"), 0.30);
-      t.strictEqual(unit.totalHours("Jun 22 2017 09:00", "Jun 22 2017 09:40"), 0.70);
-      t.strictEqual(unit.totalHours("Jun 22 2017 23:50", "Jun 23 2017 00:50"), 1.00);
-      t.strictEqual(unit.totalHours(1508443947648, 1508444243014), 0.10);
+      t.strictEqual(unit.totalHours(new Date("Jun 22 2017 12:00"), new Date("Jun 22 2017 13:00")), 1.00);
+      t.strictEqual(unit.totalHours(new Date("Jun 22 2017 12:00"), new Date("Jun 22 2017 13:30")), 1.50);
+      t.strictEqual(unit.totalHours(new Date("Jun 22 2017 09:00"), new Date("Jun 22 2017 09:20")), 0.50);
+      t.strictEqual(unit.totalHours(new Date("Jun 22 2017 09:00"), new Date("Jun 22 2017 09:40")), 0.75);
+      t.strictEqual(unit.totalHours(new Date("Jun 22 2017 23:50"), new Date("Jun 23 2017 00:50")), 1.00);
+      t.strictEqual(unit.totalHours(1508443947648, 1508444243014), 0.25);
     });
 
     QUnit.module("LocalStorageService", {
@@ -73,30 +74,31 @@
 
     QUnit.test("all methods", t => {
       t.ok(!unit.set("QUnitTest"), "set() okay");
-      t.ok(unit.get(), "object", "get() typeof okay");
       t.equal(unit.get(index), "QUnitTest", "get() okay");
       t.ok(!unit.delete(index), "delete() okay");
     });
 
-    QUnit.module("EntryController", {
+    QUnit.module("EntryListController", {
       before: () => {
-        unit = injector.get("$controller")("EntryController");
-        unit.entry.ticket = "000000";
-        unit.entry.description = "QUnitTest";
-        index = unit.entries.length;
+        unit = injector.get("$controller")("EntryListController");
+        unit.entry = {
+          ticket: "000000",
+          description: "QUnitTest",
+          timeIn: new Date()
+        };
       }
     });
 
     QUnit.test("all methods", t => {
-      t.ok(!unit.add(), "add() okay");
-      t.ok(!unit.stop(index), "stop() okay");
-      t.ok(!unit.delete(index), "delete() okay");
+      t.ok(!unit.start(), "start() okay");
+      t.ok(!unit.stop(unit.entry), "stop() okay");
+      t.ok(!unit.close(unit.entry), "close() okay");
+      t.ok(unit.getIndex(unit.entry), "getIndex() okay");
     });
 
     // Resotre backup local data
     unit = injector.get("LocalStorageService");
     unit.set("entry", backup.entry);
-
   </script>
 
 </head>
